--- a/mvijetpackcompose/build.gradle
+++ b/mvijetpackcompose/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -29,10 +28,14 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    buildFeatures {
+        // Enables Jetpack Compose for this module
+        compose true
+    }
 }
 
 def coroutines_version = "1.3.2"
-def compose_version = "0.1.0-dev01"
+def compose_version = "0.1.0-dev02"
 
 dependencies {
     implementation project(':common')
@@ -55,9 +58,6 @@ dependencies {
     // Jetpack Compose
     // Not all of these are required. Animation module, for example, will be explored in future
     // changes.
-    kapt "androidx.compose:compose-compiler:$compose_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation "androidx.compose:compose-runtime:$compose_version"
     implementation "androidx.ui:ui-layout:$compose_version"
     implementation "androidx.ui:ui-android-text:$compose_version"
     implementation "androidx.ui:ui-text:$compose_version"
