--- a/mvijetpackcompose/build.gradle
+++ b/mvijetpackcompose/build.gradle
@@ -1,74 +1,107 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
+def compose_release_version = "dev11"
+def compose_version = "0.1.0-$compose_release_version"
+def compose_compiler_extension_version = "0.1.0-$compose_release_version"
 
 android {
-    compileSdkVersion 28
-    compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
-    }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.goofy.goober"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildFeatures {
         // Enables Jetpack Compose for this module
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+        kotlinCompilerExtensionVersion "$compose_compiler_extension_version"
+    }
+}
+
+configurations {
+    ktlint
 }
 
 def coroutines_version = "1.3.2"
-def compose_version = "0.1.0-dev02"
 
 dependencies {
     implementation project(':common')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
+    implementation('androidx.appcompat:appcompat:1.1.0')
+    implementation('androidx.activity:activity-ktx:1.1.0')
+    implementation "androidx.core:core-ktx:1.2.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     // Koin
     implementation 'org.koin:koin-android:2.0.1'
     implementation 'org.koin:koin-android-viewmodel:2.0.1'
 
-    // Coroutines
+    // Coroutine - not using yet
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // Jetpack Compose
-    // Not all of these are required. Animation module, for example, will be explored in future
-    // changes.
-    implementation "androidx.ui:ui-layout:$compose_version"
-    implementation "androidx.ui:ui-android-text:$compose_version"
-    implementation "androidx.ui:ui-text:$compose_version"
-    implementation "androidx.ui:ui-framework:$compose_version"
-    implementation "androidx.ui:ui-animation:$compose_version"
-    implementation "androidx.ui:ui-animation-core:$compose_version"
-    implementation "androidx.ui:ui-material:$compose_version"
+    implementation("androidx.compose:compose-runtime:$compose_version")
+    implementation("androidx.ui:ui-core:$compose_version")
+    implementation("androidx.ui:ui-layout:$compose_version")
+    implementation("androidx.ui:ui-material:$compose_version")
+    implementation("androidx.ui:ui-material-icons-extended:$compose_version")
+    implementation("androidx.ui:ui-foundation:$compose_version")
+    implementation("androidx.ui:ui-animation:$compose_version")
     implementation "androidx.ui:ui-tooling:$compose_version"
-    implementation "androidx.ui:ui-foundation:$compose_version"
-    implementation "androidx.ui:ui-test:$compose_version"
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation("junit:junit:4.13")
+    androidTestImplementation("androidx.test:rules:1.2.0")
+    androidTestImplementation("androidx.test:runner:1.2.0")
+    androidTestImplementation("androidx.ui:ui-core:$compose_version")
+    androidTestImplementation("androidx.ui:ui-test:$compose_version")
+
+    ktlint "com.pinterest:ktlint:0.36.0"
+}
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    main = "com.pinterest.ktlint.Main"
+    classpath = configurations.ktlint
+    args "src/**/*.kt"
+}
+
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    main = "com.pinterest.ktlint.Main"
+    classpath = configurations.ktlint
+    args "-F", "src/**/*.kt"
 }
