--- a/mvijetpackcompose/src/main/AndroidManifest.xml
+++ b/mvijetpackcompose/src/main/AndroidManifest.xml
@@ -11,9 +11,11 @@
         android:label="Pizza Maker"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.Pizza"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.PizzaActivity">
+        <activity
+            android:name=".ui.activity.PizzaActivity"
+            android:theme="@style/Theme.Pizza">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
